Code Smell Fixes